[package]
name = "linera_prometheus_parsing"
version = "0.1.0"
license = "MIT"
authors = ["Mathieu Dutour Sikiric <Mathieu.Dutour@gmail.com>"]

[[bin]]
name = "parsing_prometheus_run"
path = "src/main_extract_metrics.rs"

[[bin]]
name = "run_and_obtain_metrics"
path = "src/main_iteration.rs"

[[bin]]
name = "run_iter_and_fail"
path = "src/main_iter_and_fail.rs"

[dependencies]
anyhow = "1.0.80"
sysinfo = "0.24.0"
chrono = "0.4.38"
html_parser = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.111"
thiserror = "1.0.38"
yaml-rust = "0.4"
