[package]
name = "linera_prometheus_parsing"
version = "0.2.0"
license = "MIT"
authors = ["Mathieu Dutour Sikiric <Mathieu.Dutour@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
sysinfo = "0.24.0"
chrono = "0.4.38"
html_parser = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.111"
thiserror = "1.0.38"
yaml-rust = "0.4"

[[bin]]
name = "linera_extract_logs"
path = "src/linera_extract_logs.rs"

[[bin]]
name = "linera_parsing_prometheus_run"
path = "src/linera_parsing_prometheus_run.rs"

[[bin]]
name = "linera_run_and_obtain_metrics"
path = "src/linera_run_and_obtain_metrics.rs"

[[bin]]
name = "linera_iter_and_fail"
path = "src/linera_iter_and_fail.rs"

[[bin]]
name = "linera_iter_benchmarks"
path = "src/linera_iter_benchmarks.rs"

[[bin]]
name = "linera_sequence_calls"
path = "src/linera_sequence_calls.rs"

[[bin]]
name = "data_perf_analysis"
path = "src/main_data_perf_analysis.rs"
